--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <footer>
         <p>Desenvolvido por Johnny Gil Melchiades e Carla dos Santos Rodrigues Albergoni</p>
     </footer>
+    <script type="module" src="graficos/informacoes_globais.js"></script>
 </body>
 </html>
