--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relatório de Redes Sociais</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Relatório Transportes</h1>
@@ -17,8 +20,10 @@
         <section id="graficos-container" class="graficos-container">
             <p class="graficos-container__texto">
                 <!-- Sinal para eu colocar comentário para mim mesmo o atalhe é ctrl; -->
-                 <!--  -->
-                 No mundo existem 7.888.000.000  de pessoas, dos quais 3.000.000.000 são trabalhadores e  desses, 2.000.000.000 utilizam algum tipo de transporte para ir ao trabalho, levando um tempo médio de deslocamento de 54 minutos. 
+                <!--  -->
+                No mundo existem ,<span>7.888.000.000</span> de pessoas, dos quais 3.000.000.000 são trabalhadores e desses,
+                2.000.000.000 utilizam algum tipo de transporte para ir ao trabalho, levando um tempo médio de
+                deslocamento de 54 minutos.
             </p>
         </section>
     </main>
@@ -27,4 +32,5 @@
     </footer>
     <script type="module" src="graficos/informacoes_globais.js"></script>
 </body>
+
 </html>
