--- a/index.html
+++ b/index.html
@@ -19,15 +19,20 @@
     </header>
     <main class="graficos-section">
         <section id="graficos-container" class="graficos-container">
-            <!-- <p class="graficos-container__texto">
-                Você sabia que o mundo tem 7.888 bilhões de pessoas que aproximadamente 5.04 bilhões estão conectadas em alguma rede social e passam em média 2 horas e 38 minutos conectadas.
-                Isso significa que aproximadamente 63.89% de pessoas conectadas em alguma rede social.
-            </p> -->
+            <p class="graficos-container__texto">
+                No mundo existem <span>7.888 bilhões</span> de pessoas, das quais <span>3 bilhões</span> são trabalhadores e desses, <span>2 bilhões</span> utilizam algum tipo de transporte para ir ao trabalho, levando um tempo médio de deslocamento de <span>54 minutos</span> para chegar ao trabalho.
+        
+            </p>
+
+        <!--deixar o p invisível e incluir a partir do JS na quantidadeUsua...-->
+
+        
         </section>
     </main>
     <footer>
         <p>Desenvolvido por Johnny Gil Melchiades e Carla dos Santos Rodrigues Albergoni</p>
     </footer>
+    <script type="module" src="graficos/common.js"></script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
     <script type="module" src="graficos/quantidadeUsuarios.js"></script>
 </body>
